kubernetes/apps/linkding/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`linkding.zahaan.online`)
      kind: Rule
      services:
        - name: linkding
          port: 9090

  tls:
    secretName: linkding-tls
